--- a/css/sl-slide.css
+++ b/css/sl-slide.css
@@ -83,13 +83,13 @@
 	display: none;
 }
 .item1 .sl-slide-inner {
-	background: #008C00;
+	background: #60C9F8;
 }
 .item2 .sl-slide-inner {
-	background: #c30000;
+	background: #41B29D;
 }
 .item3 .sl-slide-inner {
-	background: #2b4bb5;
+	background: #2E7394;
 }
 .sl-slider h2 {
 	padding: 170px 0 0;
